QMIMO-7 fix left column spacing for 1960x1080 too

--- a/includes/gui.css
+++ b/includes/gui.css
@@ -607,10 +607,16 @@ body.loading {
     font-size: 27px;
   }
   .left .devices {
-    height: 44%;
+    height: 35%;
+  }
+  .left .devices.nolb {
+    height: 50%;
   }
   .devicerow {
     padding: 1.25em 0;
+  }
+  .nolb .devicerow {
+    padding: 2.5em 0;
   }
   .devicerow .inner {
     height: 3.4em;
@@ -626,6 +632,12 @@ body.loading {
   }
 }
 @media screen and (min-width:1600px) {
+  .left {
+    width: 378px;
+  }
+  .main {
+    left: 378px;
+  }
   .dials .switches .control.mu {
     padding-left: 3em;
   }
@@ -661,7 +673,7 @@ body.loading {
   }
   .gain .num {
     font-size: 33px;
-    margin-left: 0.7em;
+    margin-left: 0.75em;
   }
   .title {
     font-size: 29px;
